--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<title>青苹果影视APP官方下载 - 青苹果影视APP免费下载</title>
 
 	<!-- CSS -->
-	<link rel="shortcut icon" href="https://qpp.qpgys9.app/img/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="https://www.qpgys9.app/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<style>
