--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
         loadStyleText(cssText);
     }
 	function getdown(id){
-		var url='https://www.qpgys9.app/qpgapp'+id+'.php';
+		var url='https://apk.qpgys9.app/qpgapp'+id+'.php';
 		window.location.href=url+'?r='+Math.round(new Date().getTime()/1000).toString();
 		return false;
 	}
