--- a/app/share/down/index.html
+++ b/app/share/down/index.html
@@ -12,9 +12,9 @@
 	<title>青苹果影视APP官方下载 - 青苹果影视APP免费下载</title>
 
 	<!-- CSS -->
-	<link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
-	<link rel="stylesheet" href="css/style.css">
-	<link rel="stylesheet" href="css/animate.min.css">
+	<link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/animate.min.css">
 	<style>
 		*{margin: 0;padding: 0;}
 		body{font-family: SimHei,'微软雅黑';}
@@ -210,10 +210,10 @@
 		return false;
 	}
 </script>
-<script src="js/jquery.js"></script>
-<script src="js/jquery.stellar.js"></script>
-<script src="js/owl.carousel.min.js"></script>
-<script src='js/custom.js'></script>
+<script src="/js/jquery.js"></script>
+<script src="/js/jquery.stellar.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src='/js/custom.js'></script>
 <div style="display:none;">
 <script type="text/javascript"> document.body.oncontextmenu=document.body.ondragstart= document.body.onselectstart=document.body.onbeforecopy=function(){return false;};
 document.body.onselect=document.body.oncopy=document.body.onmouseup=function(){document.selection.empty();}; </script> 
