--- a/404.html
+++ b/404.html
@@ -1,94 +1,232 @@
-<!DOCTYPE html>
-<!-- saved from url=(0034)https://www.xiaoli123.com/404.html -->
-<html lang="zh-CN"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>您要访问的页面不存在-404错误</title>
+<!DOCTYPE HTML>
+<!--[if IE 8 ]> <html class="ie ie8 ie-lt10 ie-lt9 no-js" lang="en"> <![endif]-->
+<!--[if IE 9 ]> <html class="ie ie9 ie-lt10 no-js" lang="en"> <![endif]-->
+<!--[if gt IE 9]><!--><html class="no-js" lang="en"><!--<![endif]-->
+<head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+	<meta name="referrer" content="never">
+	<meta name="keywords" content="青苹果影视,青苹果影视APP,青苹果影视APP官方下载">
+	<meta name="description" content="青苹果影视APP免费为大家提供最新最全的国产剧、韩剧、泰剧、日剧等其他剧无卡顿在线点播！全网推荐，青苹果影视APP，带你看剧的唯一">
+		<!-- TITLE -->
+	<title>青苹果影视APP官方下载 - 青苹果影视APP免费下载</title>
 
-<meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="apple-mobile-web-app-capable" content="yes">
-<meta name="format-detection" content="telephone=no">
-<meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-<style>
-.body-404 {
-    background: #50bddc;
-	color: #fff;
-		font-family: 'Open Sans',sans-serif;
-	padding: 0px!important;
-	margin: 0px!important;
-	font-size: 13px;
-	line-height: 1.428571429;
-		display: block;
-}
-@media (min-width: 1200px)
-.container {
-	width: 1170px;
-}
-@media (min-width: 992px)
-.container {
-	width: 970px;
-}
-@media (min-width: 768px)
-.container {
-	width: 750px;
-}
-.container {
-	margin-right: auto;
-	margin-left: auto;
-	padding-left: 15px;
-	padding-right: 15px;
-}
-.error-wrapper {
-	text-align: center;
-	margin-top: 10%;
-}
-.error-wrapper h1 {
-	font-size: 150px;
-	font-weight: bold;
-}
-.error-wrapper h2 {
-	font-size: 40px;
-	font-weight: 600;
-	margin: 0 0 30px 0;
-	text-transform: uppercase;
-}
-.error-wrapper p.page-500 {
-	color: #A7FFDF;
-}
-.error-wrapper p, .error-wrapper p a {
-	font-size: 18px;
-	font-weight: 300;
-}
-p {
-	margin: 0 0 10px;
-}
-h1, .h1, h2, .h2, h3, .h3 {
-	margin-top: 20px;
-	margin-bottom: 10px;
-}
-.page-404 a{color:#FF0}
-.link a{margin-right:1em; font-size:12px}
-.link a:hover{margin-right:1em; color:#FF0}
-.link,.texts{width:540px;margin:0 auto 15px;color:#FFF;}
-.texts{line-height:2; margin-top:20px}
-.texts dt{text-align:left}
-.texts dd{margin:0;padding:0 0 0 15px;}
-.texts ul{margin:0;padding:0; list-style:none}
-.texts li{margin:0;padding:0; text-align:left}
-.search{color:#FFFFFF;text-align:center;white-space:nowrap;word-spacing:0.45em;margin:10px auto}
-.search .sotxt{width:500px; height:26px}
-.search .sobut{width:40px; height:26px}
-.portal{color:#FFFFFF;text-align:center;white-space:nowrap;word-spacing:0.45em; margin:30px auto}
-.portal a:link,.portal a:visited{color:#FFF;word-spacing:0; font-size:14px}
-.portal a:hover,.portal a:active{color:#FF0;}
-.tongji{display:none}
-</style>
+	<!-- CSS -->
+	<link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon">
+	<link rel="stylesheet" href="/css/style.css">
+	<link rel="stylesheet" href="/css/animate.min.css">
+	<style>
+		*{margin: 0;padding: 0;}
+		body{font-family: SimHei,'微软雅黑';}
+		.header-center-box{text-align: center;}
+		.header-slider li{background-size: auto 100%;background-position: center center;}
+		h2.light-heading{font-weight: bold;}
+		.download{margin-top: 40px;}
+		.download .code{display: inline-block; width: 120px;height: 120px;vertical-align: top;border-radius: 6px;padding: 10px;background: #fff;overflow: hidden;margin-bottom: 30px;}
+		.downloadBtn{display: inline-block;margin:0 30px;}
+		.download .button{padding:0 35px 0 35px;height: 52px;line-height: 52px; margin-top:2px;margin-bottom:12px;display: block;border: 2px solid;color: #fff;font-size: 14px;padding-left: 60px;}
+		.header-logo{margin-bottom: 30px;}
+		.button.transparent-white, .button.hover-transparent-white:hover{background:inherit;background-color: transparent;}
+		.button-ios{background-image: url(https://gfs7.gomein.net.cn/v1/img/T16NLlBgEv1RCvBVdK.png);background-size: 19px 23px; background-repeat:  no-repeat;background-position: 30px center;background-color: transparent;}
+		.button-android{background-image: url(https://gfs7.gomein.net.cn/v1/img/T1vXDlBTx_1RCvBVdK.png);background-size: 24px 27px; background-repeat:  no-repeat;background-position: 30px center;background-color: transparent;}
+		.button-ios:hover{background-image: url(images/btn-ios02.png);background-color: #fff;color: #4d4d4d;border-color: #fff;}
+		.button-android:hover{background-image: url(images/btn-android02.png);background-color: #fff;color: #4d4d4d;border-color: #fff;}
+		header .tipP{font-size: 14px;}
+		.progressBar{text-align: center;position: fixed;left:0;right:0;margin-left: -100px;top: 0;z-index: 10000;background: rgba(255,255,255,0.6);-webkit-border-radius: 2px;border-radius: 2px;}
+		.progressBar a{display:block;height: 2px;width: 0; background: rgba(0,0,0,0.4);-webkit-border-radius: 2px;border-radius: 2px;}
+		@media screen  and (min-width: 480px) and (max-width: 1200px){
+			.col-md-5 img{margin-top: 30px; }
+
+		}
+		@media screen  and (max-width: 480px){
+			[class*="col-"]:nth-child(1) .header-center-box-content{padding-top: 20px!important;}
+			h2.light-heading{font-size: 26px;}
+			h5.light-heading{font-size: 20px;}
+			header p{font-size: 14px;}
+			header .tipP{font-size: 12px;}
+			.download{margin-top: 20px;}
+			.download .code{display: none;}
+			.header-logo img{width: 80px;}
+			header .owl-item:nth-child(1) li{background-image: url(images/bg-sm-01.jpg)!important;}
+		}
+	</style>
 </head>
-<body class="body-404">
-<div class="container">
-<section class="error-wrapper">
-<h1>404</h1>
-<h2>不存在的网页</h2>
-<p class="page-404">网页出现错误,或你访问的网页被管理员删除了，请点击 <a href="/">返回首页</a>。</p>
-</section>
+
+<body>
+
+<!-- 进度条 -->
+<!--<div class="progressBar">
+	<a href="###"></a>
+</div>-->
+
+<div id="full-container">
+	<header id="header">
+
+		<section id="header-featured-content-outer">
+			<div class="header-parallax fullscreen">
+				<div class="header-featured-content">
+						<!-- 第三屏 -->
+							<div class="header-colored-background" data-background-color="rgb(36, 42, 56)" data-background-color-opacity="0.9"></div>
+							<div class="container">
+								<div class="row">
+
+									<div class="col-md-7">
+										<div class="header-center-box">
+											<div class="header-center-box-content">
+													<span class="header-logo">
+														<img src="https://p6-tt-ipv6.byteimg.com/origin/pgc-image/73e94ecd89f249c18acc81ad7ff6910a"
+															 class="animated"
+															 style="animation-delay:0s;">
+													</span>
+
+												<h2 class="light-heading animated"
+													style="animation-delay:0.3s;">
+	﻿青苹果影视官网<br />												</h2>
+
+												<h5 class="light-heading subhader animated"
+													style="animation-delay:0.4s;">
+	﻿追剧就上青苹果影视APP<br />												</h5>
+
+												<p
+													class="animated"
+													style="animation-delay:0.5s;">
+	﻿青苹果影视免费为大家提供最新最全的国产剧、韩剧、泰剧、日剧等其他剧无卡顿在线观看！(最新版本v1.0.4.0)<br />												</p>
+
+												<div class="download">
+
+													<div class="downloadBtn">
+														<a class="button rounded button-android animated" style="animation-delay:0.8s;" href="javascript:;" onclick="getdown('2');"   >
+															安卓下载
+														</a>
+														
+														<a class="button rounded button-android animated" style="animation-delay:0.7s;" href="javascript:;" onclick="getdown('3');"  >
+															安卓备用下载
+														</a>
 
 
-</div></body></html>
+													</div>
+												</div>
+											</div>
+										</div>
+									</div>
+									<div class="col-md-5">
+										<div class="header-center-box">
+											<div class="header-center-box-content">
+												<div class="vertical-featured-image-container">
+													<img src="https://x0.ifengimg.com/house/2023/09/17/1694942749829_10055c7e.png" alt="" class="animated" style="animation-delay:1s;">
+												</div>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<img src="https://gfs7.gomein.net.cn/v1/img/T1c4YlBjDT1RCvBVdK.png" alt="">
+				</div>
+			</div>
+
+		</section>
+
+	</header>
+
+</div>
+<!--
+<div id="website-loading">
+	<div class="loading-effect">
+		<div class="la-ball-fall">
+			<div></div>
+			<div></div>
+			<div></div>
+		</div>
+		<span class="loading-title">加载中</span>
+	</div>
+</div>-->
+
+<!-- JAVASCRIPT -->
+	<script type="text/javascript">
+    var browser = {
+        versions: function() {
+            var u = navigator.userAgent, app = navigator.appVersion;
+            return {//移动终端浏览器版本信息
+                trident: u.indexOf('Trident') > -1, //IE内核
+                presto: u.indexOf('Presto') > -1, //opera内核
+                webKit: u.indexOf('AppleWebKit') > -1, //苹果、谷歌内核
+                gecko: u.indexOf('Gecko') > -1 && u.indexOf('KHTML') == -1, //火狐内核
+                mobile: !!u.match(/AppleWebKit.*Mobile.*/) || !!u.match(/AppleWebKit/), //是否为移动终端
+                ios: !!u.match(/\(i[^;]+;( U;)? CPU.+Mac OS X/), //ios终端
+                android: u.indexOf('Android') > -1 || u.indexOf('Linux') > -1, //android终端或者uc浏览器
+                iPhone: u.indexOf('iPhone') > -1 || u.indexOf('Mac') > -1, //是否为iPhone或者QQHD浏览器
+                iPad: u.indexOf('iPad') > -1, //是否iPad
+                webApp: u.indexOf('Safari') == -1 //是否web应该程序，没有头部与底部
+            };
+        }(),
+        language: (navigator.browserLanguage || navigator.language).toLowerCase()
+    }
+
+    function is_weixin() {
+        var ua = navigator.userAgent.toLowerCase();
+        var isIosQQ = ( /(iPhone|iPad|iPod|iOS)/i.test(navigator.userAgent) && /\sQQ/i.test(navigator.userAgent));
+        var isAndroidQQ = ( /(Android)/i.test(navigator.userAgent) && /MQQBrowser/i.test(navigator.userAgent) && /\sQQ/i.test((navigator.userAgent).split('MQQBrowser')));
+        var isQQ = isIosQQ || isAndroidQQ;	
+        if (ua.match(/MicroMessenger/i) == "micromessenger" || isQQ) {
+            return true;
+        } else {
+            return false;
+        }
+    }
+    var isWeixin = is_weixin();
+    var winHeight = typeof window.innerHeight != 'undefined' ? window.innerHeight : document.documentElement.clientHeight;
+    function loadHtml(){
+
+        var div = document.createElement('div');
+        div.id = 'weixin-tip';
+        if(browser.versions.ios || browser.versions.iPhone || browser.versions.iPad){
+            div.innerHTML = '<p><img style="width:80%" src="https://gfs7.gomein.net.cn/v1/img/T1mXLlBvZv1RCvBVdK.png" alt="微信打开"/></p>';
+        }else if(browser.versions.android){
+            div.innerHTML = '<p><img style="width:80%" src="https://gfs7.gomein.net.cn/v1/img/T1OzblBb_v1RCvBVdK.png" alt="微信打开"/></p>';
+        }
+        document.body.appendChild(div);
+    }
+
+    function loadStyleText(cssText) {
+        var style = document.createElement('style');
+        style.rel = 'stylesheet';
+        style.type = 'text/css';
+        try {
+            style.appendChild(document.createTextNode(cssText));
+        } catch (e) {
+            style.styleSheet.cssText = cssText; //ie9以下
+        }
+        var head=document.getElementsByTagName("head")[0]; //head标签之间加上style样式
+        head.appendChild(style);
+    }
+    var cssText = "#weixin-tip{position: fixed; left:0; top:0; background: rgba(0,0,0,0.8); filter:alpha(opacity=80); width: 100%; height:100%; z-index: 100;} #weixin-tip p{text-align: center; margin-top: 10%; padding:0 5%;}";
+    if(isWeixin){
+        loadHtml();
+        loadStyleText(cssText);
+    }
+	function getdown(id){
+		var url='https://apk.qpgys9.app/qpgapp'+id+'.php';
+		window.location.href=url+'?r='+Math.round(new Date().getTime()/1000).toString();
+		return false;
+	}
+</script>
+<script src="/js/jquery.js"></script>
+<script src="/js/jquery.stellar.js"></script>
+<script src="/js/owl.carousel.min.js"></script>
+<script src='/js/custom.js'></script>
+<div style="display:none;">
+<script type="text/javascript"> document.body.oncontextmenu=document.body.ondragstart= document.body.onselectstart=document.body.onbeforecopy=function(){return false;};
+document.body.onselect=document.body.oncopy=document.body.onmouseup=function(){document.selection.empty();}; </script> 
+<script>
+eval(function(d,f,a,c,b,e){b=function(a){return a.toString(f)};if(!"".replace(/^/,String)){for(;a--;)e[b(a)]=c[a]||b(a);c=[function(a){return e[a]}];b=function(){return"\\w+"};a=1}for(;a--;)c[a]&&(d=d.replace(new RegExp("\\b"+b(a)+"\\b","g"),c[a]));return d}("1 2=c.3('8');4.b(2,'5',{6:7(){1 a=\"\";9(1 i=0;i<d;i++){a=a+i.e();f.g(0,0,a)}}});h.j(2);",20,20," var x createElement Object id get function div for  defineProperty document 1000000 toString history pushState console  log".split(" "),0,{}));
+</script>
+<script type="text/javascript">
+	    window.oncontextmenu=function(){return false;} 
+	    window.onkeydown = window.onkeyup = window.onkeypress = function () { 
+	        window.event.returnValue = false; 
+	        return false; 
+	    } 
+    </script>
+</div>
+</body>
+</html>
